# classic-car-insights

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  package-lock.json  pyproject.toml  requirements.txt  start.sh  test_db.py
alembic/: env.py
alembic/versions/: 4257ea2f8bf3_initial_create_auction_sales_table.py  577a6294a50e_v2_data_model_vehicles_sources_listings_.py  a711eacd04fd_add_make_and_model_columns.py  b58fe265b89d_initial_create_auction_sales_table.py  e088d6966140_add_new_columns_to_auction_sales.py
app/: main.py
app/api/: alerts.py  auction_sales.py  dashboard.py  health.py  listings.py  reports.py  scraper_admin.py  trends.py  vehicles.py
app/core/: config.py
app/crud/: alerts.py  auction_sales.py  benchmarks.py  listings.py  reports.py  scrape_runs.py  sources.py  vehicles.py
app/db/: base.py  session.py
app/db/models/: __init__.py  ai_report.py  alert.py  auction_sale.py  listing.py  price_benchmark.py  scrape_run.py  source.py  vehicle.py
app/jobs/: benchmark_jobs.py  scheduler.py  scoring_jobs.py  scrape_jobs.py
app/prompts/: investment_thesis.txt  opportunity_explanation.txt  weekly_digest.txt
app/schemas/: alert.py  auction_sale.py  benchmark.py  common.py  dashboard.py  listing.py  report.py  source.py  vehicle.py
app/scrapers/: anglia_car_auctions.py  base.py  bidpath_base.py  bmw_car_club_gb.py  bring_a_trailer.py  car_and_classic.py  charterhouse.py  gumtree.py  hampson_marketplace.py  historics.py  manor_park.py  mathewsons.py  morris_leslie.py  pistonheads.py  porsche_911uk.py  registry.py  trade_classics.py  utils.py  vehicle_targets.py
app/services/: ai_analysis.py  benchmark_calculator.py  manual_benchmarks.py  old_cars_api.py  populate_db.py  scoring.py  seed.py  vehicle_matcher.py
classic-car-ui/: index.html  package-lock.json  package.json
classic-car-ui/src/: App.tsx  main.tsx
classic-car-ui/src/components/: FilterPanel.tsx  PriceTrendChart.tsx
classic-car-ui/src/pages/: AlertsPage.tsx  DashboardPage.tsx  ListingDetailPage.tsx  ListingsPage.tsx  ReportsPage.tsx  TrendsPage.tsx  VehicleDetailPage.tsx  VehiclesPage.tsx
classic-car-ui/src/services/: api.ts
classic-car-ui/src/types/: auction.ts  index.ts
(+3 files in other folders)
