[project]
name = "classic-car-insights"
version = "0.1.0"
description = "Classic Car Insights App"
authors = [
    {name = "Jonathan Hamler",email = "jkhamler@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.138.0,<1.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn[standard] (>=0.49.0,<1.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "beautifulsoup4 (>=4.15.0,<5.0.0)",
    "lxml (>=6.1.1,<7.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "anthropic (>=0.111.0,<0.112.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"